test/langtools/tools/javac/superInit/SuperInitBad17.out
SuperInitBad17.java:10:9: compiler.err.non.canonical.constructor.invoke.other.constructors: SuperInitBad17.Record
1 error
